adding second paper

--- a/reports/spokenlanguage/mybib.bib
+++ b/reports/spokenlanguage/mybib.bib
@@ -23,41 +23,18 @@
   year={2016}
 }
 
-@article{Davis80-COP,
-	Author = {Steven B. Davis and Paul Mermelstein},
-	Journal = {IEEE Transactions on Acoustics, Speech and Signal Processing},
-	Number = {4},
-	Pages = {357--366},
-	Title = {Comparison of Parametric Representation for Monosyllabic Word Recognition in Continuously Spoken Sentences},
-	Volume = {28},
-	Year = {1980}}
+@article{rosiger2017improving,
+  title={Improving coreference resolution with automatically predicted prosodic information},
+  author={R{\"o}siger, Ina and Stehwien, Sabrina and Riester, Arndt and Vu, Ngoc Thang},
+  journal={arXiv preprint arXiv:1707.09231},
+  year={2017}
+}
 
-@article{Rabiner89-ATO,
-	Author = {Lawrence R. Rabiner},
-	Journal = {Proceedings of the IEEE},
-	Number = {2},
-	Pages = {257--286},
-	Title = {A Tutorial on Hidden {Markov} Models and Selected Applications in Speech Recognition},
-	Volume = {77},
-	Year = {1989}}
-
-@book{Hastie09-TEO,
-	Address = {New York},
-	Author = {Trevor Hastie and Robert Tibshirani and Jerome Friedman},
-	Publisher = {Springer},
-	Title = {The Elements of Statistical Learning -- Data Mining, Inference, and Prediction},
-	Year = {2009}}
-
-@inproceedings{YourName17-XXX,
-	Author = {Firstname1 Lastname1 and Firstname2 Lastname2 and Firstname3 Lastname3},
-	Crossref = {INTERSPEECH18},
-	Date-Modified = {2018-01-20 09:35:16 +0000},
-	Pages = {100--104},
-	Title = {Title of your {INTERSPEECH} 2018 publication}}
-
-@proceedings{INTERSPEECH18,
-	Booktitle = {{INTERSPEECH} 2018 -- 18\textsuperscript{th} Annual Conference of the International Speech Communication Association, September 2-6, Hyderabad, India, Proceedings},
-	Date-Modified = {2018-01-20 09:24:27 +0000},
-	Key = {INTERSPEECH},
-	Title = {{INTERSPEECH} 2018 -- 19\textsuperscript{th} Annual Conference of the International Speech Communication Association, September 2-6, Hyderabad, India, Proceedings},
-	Year = {2018}}
+@inproceedings{rosiger2015using,
+  title={Using prosodic annotations to improve coreference resolution of spoken text},
+  author={R{\"o}siger, Ina and Riester, Arndt},
+  booktitle={Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 2: Short Papers)},
+  volume={2},
+  pages={83--88},
+  year={2015}
+}
