--- a/reports/wordembedding/acl2014.bib
+++ b/reports/wordembedding/acl2014.bib
@@ -6,6 +6,31 @@
   year={2015}
 }
 
+@inproceedings{faruqui2014improving,
+  title={Improving vector space word representations using multilingual correlation},
+  author={Faruqui, Manaal and Dyer, Chris},
+  booktitle={Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics},
+  pages={462--471},
+  year={2014}
+}
+
+@inproceedings{guo2015cross,
+  title={Cross-lingual dependency parsing based on distributed representations},
+  author={Guo, Jiang and Che, Wanxiang and Yarowsky, David and Wang, Haifeng and Liu, Ting},
+  booktitle={Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+  volume={1},
+  pages={1234--1244},
+  year={2015}
+}
+
+@inproceedings{faruqui2014community,
+  title={Community evaluation and exchange of word vectors at wordvectors. org},
+  author={Faruqui, Manaal and Dyer, Chris},
+  booktitle={Proceedings of 52nd Annual Meeting of the Association for Computational Linguistics: System Demonstrations},
+  pages={19--24},
+  year={2014}
+}
+
 @misc{van1996matrix,
   title={Matrix computations (Johns Hopkins studies in mathematical sciences)},
   author={Van Loan, Charles F},
