--- a/reports/wordembedding/acl2014.tex
+++ b/reports/wordembedding/acl2014.tex
@@ -40,7 +40,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-This report is a critical response to the paper \cite{huang2015translation} presented by me in class. The report will first describe the contents of the paper briefly and then go into talking about the potential flaws and methodological errors I noticed. After that, I will do a comparison with \cite{faruqui2014improving} as the authors have used it as a baseline for their results.
+This report is a critical response to the paper \cite{huang2015translation} presented by me in the class. The report will first describe the contents of the paper briefly and then go into talking about the potential flaws and methodological errors which I have noticed. After that, I will do a comparison with \cite{faruqui2014improving} as the authors have used it as a baseline for their results.
 \end{abstract}
 
 \section{Introduction}
@@ -58,7 +58,7 @@ The goal is to learn translation invariant embeddings with the following input d
 \section{Notation}
 
 \subsection{X}
-This represents a single multilingual co-occurrence matrix. The rows are the Words and the columns are the contexts in which these words appear. The entries specify the co-occurrence count between a word in any language and a context in any language.
+This represents a single multilingual co-occurrence matrix. The rows are the words and the columns are the contexts in which these words appear. The entries specify the co-occurrence count between a word in any language and a context in any language.
 
 \begin{table}[h]  
 \begin{center}
@@ -93,8 +93,8 @@ Entries in this matrix specify which words are translations of which other words
 \end{table}
 
 \subsection{D2}
-A word alignment matrix with all the contents (all languages) as both rows and columns.
-Entries in this matrix specify which contents are translations of which other contents in a different language.
+A word alignment matrix with all the contexts (all languages) as both rows and columns.
+Entries in this matrix specify which contexts are translations of which other contexts in a different language.
 
 
 \begin{table}[h]
@@ -115,7 +115,7 @@ Entries in this matrix specify which contents are translations of which other co
 The goal is to find a latent representation for each word in each language that:
 \begin{itemize}
   \item Captures information from X.
-  \item Utilizes D1 and D2 to make the representation “translation invariant”.
+  \item Utilizes D1 and D2 to make the word representation “translation invariant”.
 \end{itemize}
 
 
@@ -137,7 +137,7 @@ This can be rewritten as \begin{multline}\min_{U,V}\left\lVert \widetilde{X} - U
 \end{multline}
 
 \subsection{Lanczos Algorithm}
-The new matrix $\widetilde{X}$ obtained above is not very sparse which means that calculation of SVD will not be efficient. To solve this problem, the paper uses the Lanczos algorithm \cite{van1996matrix}, which implements the calculation of SVD through the factors without the need for carrying out multiplication explicitly. This method has linear complexity in the number of non-zeros present in the sparse matrices involved.
+The new matrix $\widetilde{X}$ obtained above is not very sparse which means that calculation of SVD will not be efficient. To solve this problem, the paper uses the Lanczos algorithm \cite{van1996matrix}, which implements the calculation of SVD directly based on the factors without the need for carrying out multiplication explicitly. This method has linear complexity in the number of non-zeros present in the sparse matrices involved.
 Thus, the time required for calculating the SVD of $\widetilde{X}$ is not much more than that of X.
 
 \section{Experiments}
@@ -157,14 +157,17 @@ Since the method is linear in the number of non-zeros in the data, the method ca
 
 \section{Methodological Errors}
 \subsection{Missing description of data} \label{missingdata}
-The paper states that it uses the same data as in \cite{faruqui2014improving} but does not give any details about what they do with it. Steps like preprocessing, removing bad data, split between train, development and test sets etc are not at all talked about. It is quite possible that they are not doing any preprocessing and just plugging the whole data straight into their model but this fact should have been mentioned. \cite{faruqui2014improving} on the other hand talk about the data they used and provide information about how the preprocessing steps.
+The paper states that it uses the same data as in \cite{faruqui2014improving} but does not give any details about what they do with it. Steps like preprocessing, removing bad data, split proportions between train, development and test sets etc are not at all talked about. It is quite possible that they are not doing any preprocessing and just plugging the whole data straight into their model but this fact should have been mentioned. \cite{faruqui2014improving} on the other hand talks about the data they used and provide information about the preprocessing steps.
 
 \subsection{Lack of details about evaluation results}
-For Monolingual evaluation, the paper presents an average of the correlation scores across 11 tasks described in \cite{faruqui2014community}. There is no description about what these tasks are and what they are trying to measure or evaluate. The paper also does not provide the scores for each of these tasks and how it compared with other word embedding techniques. The average score reported in the paper is not enough information for the readers to understand how the performance of this technique, where it excels and where it fails for monolingual tasks.
+For Monolingual evaluation, the paper presents an average of the correlation scores across 11 tasks described in \cite{faruqui2014community}. There is no description about what these tasks are and what they are trying to measure or evaluate. The paper also does not provide the scores for each of these tasks and how it compared with other word embedding techniques. The average score reported in the paper is not enough information for the readers to understand the finer details of this technique, where it excels and where it fails for monolingual tasks.
+
+\subsection{Lack of implementation details}
+The method described computes SVD of a very big matrix. It can be safely assumed that in the future, the size of training data is only going to get bigger and therefore efficient memory implementation is also required along with speed. There is no mention about how such large matrices were handled during implementation and what are the memory requirements. There is also no mention about the memory requirement of Lanczos Algorithm.
 
 \section{Potential Flaws}
 \subsection{Construction of D1 and D2 matrices}
-\cite{faruqui2014improving} provide details about how they constructed their version of the X matrix (which is quite similar to this paper) but since they do not use D1 and D2, and as this paper also completely skips all details about the data as seen in \ref{missingdata}, it is quite unclear how these two matrices are obtained. Since these matrices contain the translation information, any error in their construction will have a huge ripple effect on the quality of the resulting embedding.
+\cite{faruqui2014improving} provide details about how they constructed their version of the X matrix (which is quite similar to this paper) but since they do not use D1 and D2, and as this paper also completely skips all details about the data as seen in \ref{missingdata}, it is quite unclear how these two matrices are obtained. The transformation process required to convert alignment matrices into D1 and D2 is very critical because these matrices contain the translation information and any error in their construction will have a huge ripple effect on the quality of the resulting embedding.
 
 \subsection{Construction of the objective function}
 \ref{tilsa} describes the process used in the paper to derive the objective function. The matrices D1 and D2 are added to the basic LSA equation by adding three more expressions. It is interesting to note that while the logic is sound, the effects of the individual terms is not studied. Like in Linear Regression, different predicting variables might explain different levels of variance, the different expressions involving D1 and D2 might contribute differently here, i.e. one expression might explain more variance than others.
