--- a/reports/wordembedding/acl2014.tex
+++ b/reports/wordembedding/acl2014.tex
@@ -193,7 +193,7 @@ The paper presents a comparison with \cite{guo2015cross} but it is also mentione
 
 \section{Comparison with \cite{faruqui2014improving}}
 \subsection{Similarities}
-Both the papers build up on the distributional hypothesis which only considers the context of a word by extending to include "translational context" as well to improve word embeddings. What this means is that for any given word, the context includes the context in the source language (to which the word belongs) and the context of the corresponding translated word in a target language. It is important to note that the target languages can be multiple, depending upon the number of languages being considered in the task.
+Both the papers build up on the distributional hypothesis which only considers the context of a word by extending simple word embeddings to include "translational context" as well, to improve the quality. What this means is that for any given word, the context includes the context in the source language (to which the word belongs) and the context of the corresponding translated word in a target language. It is important to note that the target languages can be multiple, depending upon the number of languages being considered in the task.
 
 
 \subsection{Differences}
